--- a/package.json
+++ b/package.json
@@ -1,20 +1,25 @@
 {
   "name": "katjes",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "jes jes jes jes",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "jk",
+  "author": "Jan Kaßel <58153@outlook.com>",
   "private": true,
   "main": "./app.js",
   "bin": {
     "katjes": "./bin/katjes.js"
   },
   "dependencies": {
+    "async": "^2.1.4",
     "express": "^4.13.3",
-    "socket.io": "^1.3.7",
+    "processing": "^0.2.0",
+    "socket.io": "^1.7.2",
     "socket.io-client": "^1.3.7"
+  },
+  "engines": {
+    "node": ">=6.9.2"
   },
   "license": "MIT"
 }
