--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "1.0.0",
   "description": "jes jes jes jes",
   "scripts": {
+    "build": "NODE_ENV=production webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jan Kaßel <58153@outlook.com>",
   "private": true,
-  "main": "./app.js",
+  "main": "./",
   "bin": {
     "katjes": "./bin/katjes.js"
   },
   "dependencies": {
     "async": "^2.1.4",
     "express": "^4.13.3",
-    "processing": "^0.2.0",
+    "processing-js": "^1.6.3",
     "socket.io": "^1.7.2",
-    "socket.io-client": "^1.3.7"
+    "socket.io-client": "^1.3.7",
+    "webpack": "2.2.0-rc.4",
+    "webpack-dev-middleware": "^1.9.0"
   },
   "engines": {
     "node": ">=6.9.2"
