--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "babel-core": "^6.21.0",
+    "babel-loader": "^6.2.10",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-regenerator-runtime": "^6.5.0",
     "express": "^4.13.3",
     "processing-js": "^1.6.3",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.3.7",
     "webpack": "2.2.0-rc.4",
-    "webpack-dev-middleware": "^1.9.0"
+    "webpack-dev-middleware": "^1.9.0",
+    "whatwg-fetch": "^2.0.1"
   },
   "engines": {
     "node": ">=6.9.2"
