--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 node_modules
 
+public/assets/*.js
+public/assets/*.js.map
+
 # Ignore clips and video content, except for samples
 public/clips/*
 !public/clips/shepherd.ogg
