--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-regenerator-runtime": "^6.5.0",
+    "css-loader": "^0.26.1",
     "express": "^4.13.3",
+    "normalize.css": "^5.0.0",
     "processing-js": "^1.6.3",
     "socket.io": "^1.7.2",
     "socket.io-client": "^1.3.7",
+    "style-loader": "^0.13.1",
     "webpack": "2.2.0-rc.4",
     "webpack-dev-middleware": "^1.9.0",
     "whatwg-fetch": "^2.0.1"
