--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "jes jes jes jes",
   "scripts": {
+    "dev": "node .",
     "build": "NODE_ENV=production webpack --progress",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,24 +15,27 @@
   },
   "dependencies": {
     "async": "^2.1.4",
+    "express": "^4.14.0",
+    "find": "^0.2.7",
+    "normalize.css": "^5.0.0",
+    "processing-js": "^1.6.3",
+    "socket.io": "^1.7.2",
+    "socket.io-client": "^1.3.7",
+    "whatwg-fetch": "^2.0.1"
+  },
+  "engines": {
+    "node": ">=6.9.2"
+  },
+  "license": "MIT",
+  "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.26.1",
-    "express": "^4.13.3",
-    "normalize.css": "^5.0.0",
-    "processing-js": "^1.6.3",
-    "socket.io": "^1.7.2",
-    "socket.io-client": "^1.3.7",
     "style-loader": "^0.13.1",
-    "webpack": "2.2.0-rc.4",
-    "webpack-dev-middleware": "^1.9.0",
-    "whatwg-fetch": "^2.0.1"
-  },
-  "engines": {
-    "node": ">=6.9.2"
-  },
-  "license": "MIT"
+    "webpack": "^2.2.0",
+    "webpack-dev-middleware": "^1.9.0"
+  }
 }
