--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "node .",
     "build": "NODE_ENV=production webpack --progress",
+    "lint": "eslint --ignore-path .gitignore .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jan Kaßel <58153@outlook.com>",
@@ -14,7 +15,6 @@
     "katjes": "./bin/katjes.js"
   },
   "dependencies": {
-    "async": "^2.1.4",
     "express": "^4.14.0",
     "find": "^0.2.7",
     "normalize.css": "^5.0.0",
@@ -34,6 +34,7 @@
     "babel-preset-stage-0": "^6.16.0",
     "babel-regenerator-runtime": "^6.5.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.13.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.0",
     "webpack-dev-middleware": "^1.9.0"
