--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "katjes",
   "version": "1.1.0",
-  "description": "jes jes jes jes",
+  "description": "web-based AV system",
   "scripts": {
     "dev": "node .",
     "build": "NODE_ENV=production webpack --progress",
